--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">AndroidGame</string>
+    <string name="battle">В бой!</string>
+    <string name="training">Тренировка</string>
+    <string name="warm_up">Разминка</string>
 </resources>
