--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,15 @@
     <string name="battle">В бой!</string>
     <string name="training">Тренировка</string>
     <string name="warm_up">Разминка</string>
+    <string name="number_button_1">1</string>
+    <string name="number_button_2">2</string>
+    <string name="number_button_3">3</string>
+    <string name="number_button_4">4</string>
+    <string name="number_button_5">5</string>
+    <string name="number_button_6">6</string>
+    <string name="number_button_7">7</string>
+    <string name="number_button_8">8</string>
+    <string name="number_button_9">9</string>
+    <string name="number_button_0">0</string>
+    <string name="clean_button">C</string>
 </resources>
