--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="calculate_expression_game">Посчитать пример</string>
     <string name="moneybox_game">в какой копилке больше денег?</string>
     <string name="plus_or_minus_game">Плюс или минус?</string>
+    <string name="start_game">Начать игру!</string>
 </resources>
