--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,8 @@
     <string name="calculate_expression">Посчитай пример</string>
     <string name="schulte_table">Таблица Шульте</string>
     <string name="tiles">Плитки</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="restart">попробовать снова</string>
+    <string name="to_menu">в меню</string>
 </resources>
