--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="restart">попробовать снова</string>
     <string name="to_menu">в меню</string>
+    <string name="game_3_description">Решите как можно больше примеров за 60 секунд</string>
+    <string name="game_1_description">Найдите все числа в порядке возрастания. Решите задачу как можно большее количество раз</string>
 </resources>
