--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,5 @@
 <resources>
     <string name="app_name">AndroidGame</string>
-    <string name="battle">В бой!</string>
-    <string name="training">Тренировка</string>
-    <string name="warm_up">Разминка</string>
     <string name="number_button_1">1</string>
     <string name="number_button_2">2</string>
     <string name="number_button_3">3</string>
@@ -26,6 +23,10 @@
     <string name="restart">попробовать снова</string>
     <string name="to_menu">в меню</string>
     <string name="back_text">НАЗАД</string>
+    <string name="game_score_text">Результат:\u0020</string>
+    <string name="best_game_score_text">Лучший результат:\u0020</string>
+    <string name="exit_text">Выход</string>
+    <string name="games_text">Игры</string>
     <string-array name = "descriptions">
         <item>Последовательно найдите все числа как можно большее количество раз за 60 секунд</item>
         <item>Повторите как можно большее количество рисунков за 60 секунд</item>
