add record card and exit alert

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="best_game_score_text">Лучший результат:\u0020</string>
     <string name="exit_text">Выход</string>
     <string name="games_text">Игры</string>
+    <string name="exit_alert_text">Действительно хотите выйти из игры?</string>
     <string-array name = "descriptions">
         <item>Последовательно найдите все числа как можно большее количество раз за 60 секунд</item>
         <item>Повторите как можно большее количество рисунков за 60 секунд</item>
