--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -73,4 +73,6 @@
     <string name="email_is_incorrect">Почта введена неверно</string>
     <string name="check_email">Проверьте почту для восстановления пароля</string>
     <string name="try_again">Попробуйте еще раз. Что то пошло не так</string>
+    <string name="do_you_want_to_update_password">Вы действительно хотите изменить пароль?</string>
+    <string name="password_update">Изменение пароля</string>
 </resources>
