--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,6 +67,8 @@
     <string name="email_is_incorrect">Email is incorrect</string>
     <string name="check_email">Check your email for password recovery</string>
     <string name="try_again">Try again. Something went wrong</string>
+    <string name="do_you_want_to_update_password">Do you want to update password?</string>
+    <string name="password_update">Password update</string>
     <string-array name="descriptions">
         <item>Find all the numbers in ascending order as many times as possible in 60 seconds</item>
         <item>Repeat as many drawings as possible in 60 seconds</item>
