--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -75,4 +75,5 @@
     <string name="try_again">Попробуйте еще раз. Что то пошло не так</string>
     <string name="do_you_want_to_update_password">Вы действительно хотите изменить пароль?</string>
     <string name="password_update">Изменение пароля</string>
+    <string name="new_best_score">Новый рекорд!</string>
 </resources>
